# crud-axum-surrealdb

./: Cargo.toml  README.md  history.txt
pizzashopdb/: 000013.sst  000016.sst  000021.sst  IDENTITY  LOG  LOG.old.1700388396895717  LOG.old.1700389808765682  LOG.old.1700499722871468  MANIFEST-000023
src/: errors.rs  main.rs  models.rs  routes.rs
src/db/: database.rs
src/errors/: pizza_errors.rs
src/models/: pizza.rs
