[package]
name = "rust_web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
dmp = "0.2.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.0.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
uuid = "1.5.0"
validator = { version = "0.16.1", features = ["derive"] }
